# lesson04-refactoring

./: CMakeLists.txt  refactoring_good.cpp
